--- a/Trunk/www/communication/ihm.html
+++ b/Trunk/www/communication/ihm.html
@@ -14,13 +14,11 @@
             }]
           }"></script>
 
-
-   <!-- <script type="application/javascript" src="oXHR.js"></script>-->
     <link rel="stylesheet" href="ihm.css" />
 	<meta charset="utf-8"/>
 </head>
 
-<body onload="getMeasure();">
+<body onload="getHardwareConfiguration();">
 
 	<header>
 
@@ -40,10 +38,6 @@
 
 		<div>
 			<form id="sensorTypeRequest">
-				<input type="radio" name="sensor" value="1" id="ph" /> <label for="ph">ph</label><br />
-		    	<input type="radio" name="sensor" value="2" id="chlorine" /> <label for="chlorine">chlorine</label><br />
-		    	<input type="radio" name="sensor" value="3" id="water" /> <label for="water">water</label><br />
-		    	<input type="radio" name="sensor" value="4" id="temperature" checked/> <label for="temperature">temperature</label>
 	    	</form>
 		</div>
 
@@ -73,6 +67,10 @@
 
 		<div>
 			<form id="CreateUserCommand">
+				<select id="type">
+					<option value="UserConfiguration">User Configuration</option>
+					<option value="Actuators">Actuators</option>
+				</select>
 				<select id="command">
 					<option value="Create">Create</option>
 					<option value="Update">Update</option>
@@ -107,7 +105,7 @@
 
 
 
-	<script src="http://code.jquery.com/jquery.min.js"></script>
+	<script type="application/javascript" src="packages/jquery-2.1.3.min.js"></script>
 	<script type="application/javascript" src="ihm.js"></script>
 
 </body>
