--- a/Trunk/www/communication/ihm.html
+++ b/Trunk/www/communication/ihm.html
@@ -58,6 +58,7 @@
 		<div id="chart">
 			<form id="orderRequest">
 				<input type="text" id="order" placeholder="the regulation order"/>
+				<input type="text" id="xlastChart" placeholder="number of data for the chart"/>
 			</form>
 			<div id="curve_chart">
 			</div>
