modification select value for the userCommand
modification of the choice system for the usercommand's value

--- a/Trunk/www/communication/ihm.html
+++ b/Trunk/www/communication/ihm.html
@@ -80,10 +80,7 @@
 					<option value="Set">Set</option>
 				</select>
 				<input type="text" id="targetName" placeholder="target name"/>
-				<select id="val">
-					<option value="on">On</option>
-					<option value="off">Off</option>
-				</select>
+				<input type="text" id="val" placeholder="value" />
 				<input type="button" value="save command" onclick="postUserCommand();"/>
 			</form>
 		</div>
