--- a/Trunk/www/communication/ihm.html
+++ b/Trunk/www/communication/ihm.html
@@ -18,17 +18,20 @@
 	<meta charset="utf-8"/>
 </head>
 
-<body onload="getHardwareConfiguration();">
+<body onload="displayLoginBox();">
 
 	<header>
 
-			<h1 style="text-align: center">Plashboard GUI test</h1>
+		<h1 style="text-align: center">Plashboard GUI test</h1>
+
+		<div id="connect">
+		</div>
 
 
 	</header>
 
 
-	<section style="margin-top: 100px">
+	<section>
 
 		<div>
 			<form id="xlastRequest">
@@ -105,5 +108,7 @@
 
 	<script type="application/javascript" src="packages/jquery-2.1.3.min.js"></script>
 	<script type="application/javascript" src="ihm.js"></script>
+	<!--<script type="application/javascript" src="authorize.js"></script>-->
 
 </body>
+</html>
