modification display connect and disconnect

--- a/Trunk/www/communication/ihm.html
+++ b/Trunk/www/communication/ihm.html
@@ -24,6 +24,9 @@
 
 		<h1 style="text-align: center">Plashboard GUI test</h1>
 
+		<div id="error">
+		</div>
+
 		<div id="connect">
 		</div>
 
@@ -31,7 +34,7 @@
 	</header>
 
 
-	<section>
+	<section id="connected">
 
 		<div>
 			<form id="xlastRequest">
@@ -96,6 +99,10 @@
 
 
 
+	</section>
+
+	<section id="disconnected">
+		<p>You aren't connected</p>
 	</section>
 
 	<footer style="margin-top: 700px">
