Delete authorize files and add alert display

--- a/Trunk/www/communication/ihm.html
+++ b/Trunk/www/communication/ihm.html
@@ -30,6 +30,9 @@
 		<div id="connect">
 		</div>
 
+		<div id="alert">
+		</div>
+
 
 	</header>
 
@@ -106,16 +109,12 @@
 	</section>
 
 	<footer style="margin-top: 700px">
-
-			<p style="size:12px">developped by us</p>
-
 	</footer>
 
 
 
 	<script type="application/javascript" src="packages/jquery-2.1.3.min.js"></script>
 	<script type="application/javascript" src="ihm.js"></script>
-	<!--<script type="application/javascript" src="authorize.js"></script>-->
 
 </body>
 </html>
