Update alert to remove form GUI

--- a/Trunk/www/communication/ihm.html
+++ b/Trunk/www/communication/ihm.html
@@ -41,7 +41,7 @@
 
 		<div>
 			<form id="xlastRequest">
-				<input type="text" id="xlast" placeholder="number of data displayed"/>
+				<input type="text" id="xlast" value="20" placeholder="number of data displayed"/>
 			</form>
 		</div>
 
