--- a/Trunk/www/communication/ihm.html
+++ b/Trunk/www/communication/ihm.html
@@ -52,9 +52,9 @@
 
 
 		<div>
-			<form id="datetimeRequest">
+			<!--<form id="datetimeRequest">
 				<input type="datetime-local" id="timestamp"/>
-			</form>
+			</form>-->
 		</div>
 
 
