--- a/Trunk/www/communication/ihm.html
+++ b/Trunk/www/communication/ihm.html
@@ -113,8 +113,8 @@
 
 
 
-	<!--<script type="application/javascript" src="packages/jquery-2.1.3.min.js"></script>-->
-	<script type="application/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+	<script type="application/javascript" src="packages/jquery-2.1.3.min.js"></script>
+	<!--<script type="application/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>-->
 	<script type="application/javascript" src="ihm.js"></script>
 
 </body>
